Improve validation and storage error handling
Normalize command input and reject malformed parameters, duplicate
tasks, invalid date ranges, and unexpected arguments.

Keep storage failures recoverable and add regression coverage for
command, persistence, and console behavior.